--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li>Christian</li>
+    </ul>
     
     <script src="script.js"></script>
 </body>
