--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-
+    <div>
+        <div>
+           <h1>Budget Buddy</h1>
+           <div> 
+               <form action="">
+                   <label for="weeklyBudgetAmount">Weekly Budget Amount</label>
+                   <input type="number" id="weeklyBudgetAmount">
+                   <input type="submit"></input>
+                </form>
+           </div>
+        </div>
+        <div>
+            
+            <div> 
+                <form action="">
+                    <label for="itemCost">Cost</label>
+                    <input type="number" id="itemCost">
+                    <select name="cars" id="cars">
+                        <option value="entertainment">Entertainment</option>
+                        <option value="food">Food</option>
+                        <option value="clothing">Clothing</option>
+                        <option value="bills">Bills</option>
+                      </select>
+                    <input type="submit"></input>
+                </form>
+            </div>
+        </div>
+        <div>
+            <div id="expense">
+                <p>Weekly Budget Total: <span>0</span></p>
+                <p>Item expense: <span>0</span></p>
+                <p>Remaining: <span>0</span></p>
+            </div>     
+            <div>
+                <p>Weekly Budget Total: <span>0</span></p>
+                <p>Item expense: <span>0</span></p>
+                <p>Remaining: <span>0</span></p>
+                <p>Remaining: <span>0</span></p>
+            </div>
+        </div>
+    </div>       
     <script src="script.js"></script>
 </body>
 </html>
