--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <p>Remaining: <span>0</span></p>
             </div>     
             <div>
-                <p>Weekly Budget Total: <span>0</span></p>
-                <p>Item expense: <span>0</span></p>
-                <p>Remaining: <span>0</span></p>
-                <p>Remaining: <span>0</span></p>
+                <p>Entertainment: <span>0</span></p>
+                <p>Food: <span>0</span></p>
+                <p>Clothing: <span>0</span></p>
+                <p>Bills: <span>0</span></p>
             </div>
         </div>
     </div>       
