--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
            <h1>Budget Buddy</h1>
            <div> 
-               <form action="">
+               <form id="startingBudget">
                    <label for="weeklyBudgetAmount">Weekly Budget Amount</label>
                    <input type="number" id="weeklyBudgetAmount">
                    <input type="submit"></input>
@@ -22,10 +22,10 @@
         <div>
             
             <div> 
-                <form action="">
+                <form id="itemForm">
                     <label for="itemCost">Cost</label>
                     <input type="number" id="itemCost">
-                    <select name="cars" id="cars">
+                    <select name="" id="purchases">
                         <option value="entertainment">Entertainment</option>
                         <option value="food">Food</option>
                         <option value="clothing">Clothing</option>
