--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            </div>
         </div>
         <div>
-            
+        <!--Include list of purchases somewhere-->
             <div> 
                 <form id="itemForm">
                     <label for="itemCost">Cost</label>
@@ -37,15 +37,15 @@
         </div>
         <div>
             <div id="expense">
-                <p>Weekly Budget Total: <span>0</span></p>
-                <p>Item expense: <span>0</span></p>
-                <p>Remaining: <span>0</span></p>
+                <p>Weekly Budget Total: <span id="weeklyBudgetTotal">0</span></p>
+                <p>Item expense: <span id="itemExpense">0</span></p>
+                <p>Remaining: <span id="remainingBalance">0</span></p>
             </div>     
             <div>
-                <p>Entertainment: <span>0</span></p>
-                <p>Food: <span>0</span></p>
-                <p>Clothing: <span>0</span></p>
-                <p>Bills: <span>0</span></p>
+                <p>Entertainment: <span id="entertainment">0</span></p>
+                <p>Food: <span id="food">0</span></p>
+                <p>Clothing: <span id="clothing">0</span></p>
+                <p>Bills: <span id="bills">0</span></p>
             </div>
         </div>
     </div>       
