--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>
             <div id="expense">
                 <p>Weekly Budget Total: <span id="weeklyBudgetTotal">0</span></p>
-                <p>Item expense: <span id="itemExpense">0</span></p>
+                <p>Total Expenses: <span id="totalExpenses">0</span></p>
                 <p>Remaining: <span id="remainingBalance">0</span></p>
             </div>     
             <div>
