--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <div> 
                <form id="startingBudget">
                    <label for="weeklyBudgetAmount">Weekly Budget Amount</label>
-                   <input type="number" id="weeklyBudgetAmount">
+                   <input type="number" name="weeklyBudgetAmount" id="weeklyBudgetAmount">
                    <input type="submit"></input>
                 </form>
            </div>
@@ -24,7 +24,7 @@
             <div> 
                 <form id="itemForm">
                     <label for="itemCost">Cost</label>
-                    <input type="number" id="itemCost">
+                    <input type="number" step=".01" id="itemCost">
                     <select name="" id="purchases">
                         <option value="entertainment">Entertainment</option>
                         <option value="food">Food</option>
