--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
                         <option value="food">Food</option>
                         <option value="clothing">Clothing</option>
                         <option value="bills">Bills</option>
-                      </select>
-                    <input type="submit"></input>
+                        <option value="misc">Misc.</option>
+                    </select>
+                        <label for="itemName">Item</label>
+                        <input type="text" id="itemName" placeholder="Item Name">
+                        <input type="submit"></input>
                 </form>
             </div>
         </div>
@@ -40,12 +43,20 @@
                 <p>Weekly Budget Total: <span id="weeklyBudgetTotal">0</span></p>
                 <p>Total Expenses: <span id="totalExpenses">0</span></p>
                 <p>Remaining: <span id="remainingBalance">0</span></p>
-            </div>     
+            </div>
+         
             <div>
+
                 <p>Entertainment: <span id="entertainment">0</span></p>
+                <ul id="entItemList"></ul>
                 <p>Food: <span id="food">0</span></p>
+                <ul id="foodItemList"></ul>
                 <p>Clothing: <span id="clothing">0</span></p>
+                <ul id="clothingItemList"></ul>
                 <p>Bills: <span id="bills">0</span></p>
+                <ul id="billsItemList"></ul>
+                <p>Misc: <span id="misc"> 0</span></p>
+                <ul id="miscItemList"></ul>
             </div>
         </div>
     </div>       
