--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Remaining: <span id="remainingBalance">0</span></p>
             </div>
          
-            <div>
+            <div class="" id="whatTheyBought">
                 <p>Entertainment: <span id="entertainment">0</span></p>
                 <ul id="entItemList"></ul>
                 <p>Food: <span id="food">0</span></p>
